<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_menu_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/count_down_menu"
            android:title="@string/main_menu_count_down"
            android:icon="@drawable/main_skid_menu_home"/>
        <item
            android:id="@+id/label_menu"
            android:title="@string/main_menu_label"
            android:icon="@drawable/main_skid_menu_label" />
        <item
            android:id="@+id/small_parts_menu"
            android:title="@string/main_menu_small_parts"
            android:icon="@drawable/main_skid_menu_small_part" />
        <item
            android:id="@+id/theme_color_menu"
            android:title="@string/main_menu_theme_color"
            android:icon="@drawable/main_skid_menu_theme_color"/>
        <item
            android:id="@+id/pay_version_menu"
            android:title="@string/main_menu_pay_version"
            android:icon="@drawable/main_skid_menu_pay_version"/>
    </group>

    <group
        android:id="@+id/main_menu_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/setting_menu"
            android:title="@string/maim_menu_setting"
            android:icon="@drawable/main_skid_menu_setting" />
        <item
            android:id="@+id/about_menu"
            android:title="@string/main_menu_about"
            android:icon="@drawable/main_skid_menu_about"/>
        <item
            android:id="@+id/help_menu"
            android:title="@string/main_menu_help"
            android:icon="@drawable/main_skid_menu_help"/>
    </group>

</menu>